--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grammar Showcase</title>
     <script src="js/jquery.min.js"></script>
-    <script src="bootstrap-5.1.1-dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="bootstrap-5.1.1-dist/css/bootstrap.css">
+    <script src="./js/bootstrap.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/rules.css">
 </head>
